--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "dev": "webpack-dev-server --open --mode development"
   },
   "dependencies": {
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "mwutil": "^1.0.8",
     "vue": "^2.5.2"
   },
   "devDependencies": {
