--- a/src/core/tool/package.json
+++ b/src/core/tool/package.json
@@ -1,14 +1,14 @@
 {
   "name": "mwutil",
-  "version": "1.0.3",
+  "version": "1.0.8",
   "description": "this is a md's util",
-  "main": "./dist/mwutil.min.js",
+  "main": "dist/mwutil.min.js",
   "author": "zhenzong.jin@mwcare.cn",
   "license": "ISC",
   "scripts": {
-    "build": "webpack --mode production",
-    "dev": "webpack-dev-server --open --mode development"
+    "build": "webpack --mode production"
   },
+  "files":["dist"],
   "devDependencies": {
     "@babel/cli": "^7.7.0",
     "@babel/core": "^7.7.2",
@@ -25,6 +25,7 @@
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.3.1",
     "mini-css-extract-plugin": "^0.8.0",
+    "mwutil": "^1.0.5",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ssi-webpack-plugin": "^1.0.8",
     "style-loader": "^0.22.0",
