--- a/src/core/tool/package.json
+++ b/src/core/tool/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mwutil",
-  "version": "1.3.1",
-  "description": "this is a md's util",
+  "version": "1.3.2",
+  "description": "mwutil使用是一个集常用js方法的库，操作简单。",
   "main": "dist/mwutil.min.js",
   "author": "zhenzong.jin@mwcare.cn",
   "license": "ISC",
